0.8.7 (?/?/2013):
-----------------

- Adjusted alignment code when using -n or -N in sgdisk to keep the
  requested partition size (if specified using +###{MGT} terminology)
  as the requested value rather than relative to the requested start
  point. This gives you the requested partition size rather than be
  slightly smaller if sgdisk needs to adjust the start point up a bit and
  it prevents gaps from appearing between partitions if several are created
  in succession using automatic placement of the start point.

- Fixed small bugs in gdisk_test.sh script.

- Removed stray debug message that would appear when reading MBR disks.

- Added partition type code for Intel Fast Flash (GUID
  D3BFE2DE-3DAF-11DF-BA40-E3A556D89593, code EF03), used by systems that
  implement Intel's Rapid Start technology. See
  http://blog.adios.tw/2012/10/funtoo-linux-and-intel-rapid-start.html.

- Added partition type code for Haiku BFS (GUID
  42465331-3BA3-10F1-802A-4861696B7521; code EB00).

0.8.6 (1/9/2013):
-----------------

- Fixed a bug that could cause sgdisk to crash when passing a partition
  number of 0 to the -t option.

- Added support for building under Solaris.

- Added a new check to the verification code.

- Added partition type code for Sony system partition
  (F4019732-066E-4E12-8273-346C5641494F). I'm not entirely clear what this
  is used for, but it's appearing on some new Sony computers.

- Tweaked hybrid MBR creation options to fix a problem that caused the main
  0xEE MBR partition to NOT be created if the user told gdisk to NOT place
  it at the start of the disk AND IF fewer than three partitions are
  hybridize AND IF the user opted to create a second protective partition.

- Changed default build options for Mac OS X to *NOT* use libicu,
  since it seems to have broken somewhere along the line. It still
  works on Linux, though.

- Added partition type codes for VMWare ESX (FB00, FB01, and FC00).

0.8.5 (5/30/2012):
------------------
