@@ -54,6 +54,9 @@ static struct MenuItem menuMain[] = {
 #define EMPTY_SPACE_OPTIONS "abhlnqvw"
 #define PARTITION_OPTIONS "abdhilmqtvw"
 
+// Constants for how to highlight a selected menu item
+#define USE_CURSES 1
+#define USE_ARROW 2
 
 // A "Space" is a partition or an unallocated chunk of disk space, maintained
 // in a doubly-linked-list data structure to facilitate creating displays of
@@ -81,6 +84,7 @@ protected:
    string whichOptions;
    char currentKey;
    int numSpaces;
+   int displayType;
 
    // Functions relating to Spaces data structures
    void EmptySpaces(void);
@@ -111,6 +115,7 @@ public:
    void LoadBackup(void);
    void ShowHelp(void);
    // User input and menuing functions
+   void SetDisplayType(int dt) {displayType = dt;}
    void ChangeSpaceSelection(int delta);
    void MoveSelection(int delta);
    void DisplayOptions(char selectedKey);
